[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/block_editor/block_editor.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/block_editor/editor_procedure.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.211765, 0.203922, 0.2, 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.54902 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = ExtResource( 2 )

[node name="BlockEditor" type="PanelContainer"]
margin_left = 15.0
margin_top = 14.0
margin_right = 410.0
margin_bottom = 326.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 395.0
margin_bottom = 312.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 0

[node name="Scroll" type="ScrollContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 385.0
margin_bottom = 312.0
scroll_horizontal_enabled = false

[node name="Items" type="VBoxContainer" parent="Margin/Scroll"]
margin_right = 375.0
margin_bottom = 126.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Top" type="VBoxContainer" parent="Margin/Scroll/Items"]
editor/display_folded = true
margin_right = 375.0
margin_bottom = 86.0

[node name="EditorHeading" type="HBoxContainer" parent="Margin/Scroll/Items/Top"]
margin_right = 375.0
margin_bottom = 37.0

[node name="ButtonPrev" type="Button" parent="Margin/Scroll/Items/Top/EditorHeading"]
margin_top = 2.0
margin_right = 30.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "<"

[node name="Placeholder1" type="Control" parent="Margin/Scroll/Items/Top/EditorHeading"]
margin_left = 34.0
margin_right = 74.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="RobotName" type="Label" parent="Margin/Scroll/Items/Top/EditorHeading"]
margin_left = 78.0
margin_right = 158.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "Robot 1"

[node name="Placeholder2" type="Control" parent="Margin/Scroll/Items/Top/EditorHeading"]
margin_left = 162.0
margin_right = 202.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="ButtonNext" type="Button" parent="Margin/Scroll/Items/Top/EditorHeading"]
margin_left = 206.0
margin_top = 2.0
margin_right = 236.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Placeholder3" type="Control" parent="Margin/Scroll/Items/Top/EditorHeading"]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="NewProcedure" type="Button" parent="Margin/Scroll/Items/Top/EditorHeading"]
margin_left = 284.0
margin_right = 374.0
margin_bottom = 24.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "new procedure"

[node name="WarningLabel" type="Label" parent="Margin/Scroll/Items/Top"]
margin_top = 41.0
margin_right = 375.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 5 )
text = "This robot is controlled by player 1, modification to the code below will be overwritten."
autowrap = true

[node name="Procedure0" parent="Margin/Scroll/Items" instance=ExtResource( 3 )]
margin_top = 96.0
margin_right = 375.0
margin_bottom = 126.0
readonly = true

[node name="CoverPanel" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_right = 378.0
margin_bottom = 312.0
custom_styles/panel = SubResource( 6 )

[node name="Control" type="Control" parent="CoverPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="CoverPanel/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -30.5456
margin_right = 117.0
margin_bottom = 6.45444
custom_fonts/font = SubResource( 7 )
text = "The scene is playing"
align = 1

[node name="Label2" type="Label" parent="CoverPanel/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = 1.42154
margin_right = 117.0
margin_bottom = 38.4215
custom_fonts/font = SubResource( 8 )
text = "press stop to continue editing"
align = 1
valign = 1

[connection signal="pressed" from="Margin/Scroll/Items/Top/EditorHeading/ButtonPrev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Margin/Scroll/Items/Top/EditorHeading/ButtonNext" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Margin/Scroll/Items/Top/EditorHeading/NewProcedure" to="." method="_on_new_procedure_pressed"]
